fixed color for roomfinder attribution not being readable

--- a/webclient/src/views/view/view-view.scss
+++ b/webclient/src/views/view/view-view.scss
@@ -254,7 +254,7 @@
             bottom: 1px;
             right: 1px;
             padding: 1px 5px;
-            color: #262626;
+            color: $body-font-color;
             background-color: $container-loading-bg;
             font-size: 10px;
         }
